@@ -1,6 +1,7 @@
 46
 ================
 
+16/11/12 Show column for littermates on the litter editing screen #1195
 16/11/12 Restrict new litters to 20 animals to prevent mistakes #903
 10/11/12 Add extra anibase/identichip prefixes: 978102, 972055
 09/11/22 follow redirects when retrieving images via http
